added some few changes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
                          </div>
                          <div class="right">
                              <div class="icon"></div>
-                            <!-- <img src="images/icon-bookmark.svg" class="icon"> -->
                             <button class="bookmark-btn">Bookmark</button>
                          </div> 
                      </div>
@@ -154,42 +153,9 @@
             </div>
         </div> 
     </div>
-  
-  
-  
-
-
-
-  
-  
-
-   
-   
    
 
-  
-
- 
-  
-  
-  
-  
-  
-  
-
-  
-  
-  
-  
-  
-
-  
-  
- 
-  
-  
-
-  <!-- Selection modal start -->
+  <!-- Selection modal section -->
 <div class="modal-wrapper">
     <div class="modal-container">
         <div class="modal-start">
@@ -314,25 +280,9 @@
 
 
 
-  <!-- Selected pledge start -->
-  
-  <!-- Selected pledge end -->
+  >
 
-  
-
-  <!-- Selected pledge start -->
-  
-  <!-- Selected pledge end -->
-
-  
-
-  <!-- Selected pledge  start -->
-  
-  <!-- Selected pledge end -->
-
-  <!-- Selection modal end -->
-
-  <!-- Success modal start -->
+  <!-- Success modal section -->
 <div class="thanks-wrapper">
     <div class="thanks-container">
         <img src="images/icon-check.svg" alt="" class="check">
@@ -346,6 +296,6 @@
         <button class="thanks-btn">Got it!</button>
     </div>
 </div>
-  <!-- Success modal end -->
+    <script src="./main.js"></script>
 </body>
 </html>
