added the pledge features

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
                             <button class="btn-left">Back this project</button>
                          </div>
                          <div class="right">
-                            <div class="icon"></div>
+                            <img src="images/icon-bookmark.svg" alt="" class="icon">
                             <button class="bookmark-btn">Bookmark</button> 
+
                          </div> 
                      </div>
                 </div>
@@ -189,7 +190,7 @@
                         <input type="radio" name="radio">
                         <div class="labels">
                             <label for="radio">Bamboo Stand</label>
-                            <a href="#">Pledge $25 or more</a>
+                            <label for=""><a href="#">Pledge $25 or more</a></label>
                         </div>
                        </div>
                        <div class="middle-text">
@@ -217,7 +218,7 @@
                             <input type="radio" name="radio">
                             <div class="labels">
                                 <label for="radio">Black Edition Stand</label>
-                                <a href="#">Pledge $75 or more</a>
+                                <label for=""><a href="#">Pledge $75 or more</a></label>
                             </div>   
                         </div>
                             
